--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head></head><body>
 
-
-
-
-
-
     <table style="width:60%;" align="center">
       <tr>
-        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #1</a></td>
+        <td><a rel="noopener" href="./assignment1/homepage.html">Link to Assignment #1</a></td>
           <td></td>
       </tr>
         <tr>
-        <td><a rel="noopener" href="./helloworld.html">Link to Assignment #2</a></td>
-        <td><a rel="noopener" href="ScrambleThisName.html">Link to Assignment #2 Cloud</a></td>    
+        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #2</a></td>
+        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
-        <td><a rel="noopener" href="ScrambleThisName.html">Link to Assignment #3</a></td>
-        <td><a rel="noopener" href="ScrambleThisName.html">Link to Assignment #3 Cloud</a></td> 
+        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #3</a></td>
+        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #3 Cloud</a></td> 
       </tr>
       <tr>
          <td></td>
-        <td><a rel="noopener" href="ScrambleThisName.html">Link to Assignment #4 Cloud</a></td> 
+        <td><a rel="noopener" href="https://www.google.com">Link to Assignment #4 Cloud</a></td> 
       </tr>
       </table>
     
