--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
           <td></td>
       </tr>
         <tr>
-        <td><a rel="noopener" href="https://www.404.com">Link to Assignment #2</a></td>
-        <td><a rel="noopener" href="https://www.404.com">Link to Assignment #2 Cloud</a></td>    
+        <td><a rel="noopener" href="404">Link to Assignment #2</a></td>
+        <td><a rel="noopener" href="404">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
-        <td><a rel="noopener" href="https://www.404.com">Link to Assignment #3</a></td>
-        <td><a rel="noopener" href="https://www.404.com">Link to Assignment #3 Cloud</a></td> 
+        <td><a rel="noopener" href="404">Link to Assignment #3</a></td>
+        <td><a rel="noopener" href="404">Link to Assignment #3 Cloud</a></td> 
       </tr>
       <tr>
          <td></td>
-        <td><a rel="noopener" href="https://www.404.com">Link to Assignment #4 Cloud</a></td> 
+        <td><a rel="noopener" href="404">Link to Assignment #4 Cloud</a></td> 
       </tr>
       </table>
     
