--- a/hw1571.html
+++ b/hw1571.html
@@ -6,7 +6,7 @@
           <td></td>
       </tr>
         <tr>
-        <td><a rel="noopener" href="assignment2/static/homepage.html">Link to Assignment #2</a></td>
+        <td><a rel="noopener" href="./assignment2/static/homepage.html">Link to Assignment #2</a></td>
         <td><a rel="noopener" href="homepage.html">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
