--- a/hw1571.html
+++ b/hw1571.html
@@ -7,7 +7,7 @@
       </tr>
         <tr>
         <td><a rel="noopener" href="./assignment2/static/homepage.html">Link to Assignment #2</a></td>
-        <td><a rel="noopener" href="homepage.html">Link to Assignment #2 Cloud</a></td>    
+        <td><a rel="noopener" href="http://hw25-env.eba-pi3hxktm.us-east-1.elasticbeanstalk.com/">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
         <td><a rel="noopener" href="homepage.html">Link to Assignment #3</a></td>
