--- a/hw1571.html
+++ b/hw1571.html
@@ -6,8 +6,8 @@
           <td></td>
       </tr>
         <tr>
-        <td><a rel="noopener" href="./assignment2/static/homepage.html">Link to Assignment #2</a></td>
-        <td><a rel="noopener" href="http://hw25-env.eba-pi3hxktm.us-east-1.elasticbeanstalk.com/">Link to Assignment #2 Cloud</a></td>    
+        <td><a rel="noopener" href="http://hw25-env.eba-pi3hxktm.us-east-1.elasticbeanstalk.com/static/homepage.html">Link to Assignment #2</a></td>
+        <td><a rel="noopener" href="http://hw25-env.eba-pi3hxktm.us-east-1.elasticbeanstalk.com/weatherdata?latitude=42.3478&longitude=-71.0466">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
         <td><a rel="noopener" href="homepage.html">Link to Assignment #3</a></td>
