--- a/hw1571.html
+++ b/hw1571.html
@@ -11,7 +11,7 @@
       </tr>
       <tr>
         <td><a rel="noopener" href="homepage.html">Link to Assignment #3</a></td>
-        <td><a rel="noopener" href="homepage.html">Link to Assignment #3 Cloud</a></td> 
+        <td><a rel="noopener" href="http://517hw3-env.eba-8t2mutu3.us-east-1.elasticbeanstalk.com/datadisplay">Link to Assignment #3 Cloud</a></td> 
       </tr>
       <tr>
          <td></td>
