--- a/hw1571.html
+++ b/hw1571.html
@@ -10,7 +10,7 @@
         <td><a rel="noopener" href="http://hw25-env.eba-pi3hxktm.us-east-1.elasticbeanstalk.com/weatherdata?latitude=42.3478&longitude=-71.0466">Link to Assignment #2 Cloud</a></td>    
       </tr>
       <tr>
-        <td><a rel="noopener" href="homepage.html">Link to Assignment #3</a></td>
+        <td><a rel="noopener" href="http://finallydeployedhw3-env.eba-g2jth3hj.us-east-1.elasticbeanstalk.com">Link to Assignment #3</a></td>
         <td><a rel="noopener" href="http://517hw3-env.eba-8t2mutu3.us-east-1.elasticbeanstalk.com/datadisplay">Link to Assignment #3 Cloud</a></td> 
       </tr>
       <tr>
