--- a/hw1571.html
+++ b/hw1571.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
          <td></td>
-        <td><a rel="noopener" href="homepage.html">Link to Assignment #4 Cloud</a></td> 
+        <td><a rel="noopener" href="http://androidweatherapp-env.eba-ervt9mgh.us-east-1.elasticbeanstalk.com/finalprojectdata">Link to Assignment #4 Cloud</a></td> 
       </tr>
       </table>
     
