--- a/BedroomWithBall/index.html
+++ b/BedroomWithBall/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BedroomWithBall.loader.js";
+      var loaderUrl = buildUrl + "/2DCleaner.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BedroomWithBall.data",
-        frameworkUrl: buildUrl + "/BedroomWithBall.framework.js",
-        codeUrl: buildUrl + "/BedroomWithBall.wasm",
+        dataUrl: buildUrl + "/2DCleaner.data",
+        frameworkUrl: buildUrl + "/2DCleaner.framework.js",
+        codeUrl: buildUrl + "/2DCleaner.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "UnityLearn",
         productName: "Essentials Project",
