--- a/weather_app/browser/index.html
+++ b/weather_app/browser/index.html
@@ -1362,7 +1362,7 @@
   <app-root></app-root>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_k7W8X03oSFV0g1994jmy8iaUNaDMZQ0&amp;loading=async&amp;libraries=marker&amp;map_ids=7d4b8caa60482244"></script>
-  <link rel="modulepreload" href="./chunk-O4NQQMBT.js">
+  <link rel="modulepreload" href="weather_app/broswer/chunk-O4NQQMBT.js">
   <script src="polyfills-MH2GNY63.js" type="module"></script>
   <script src="main-Z4EP6ENI.js" type="module"></script>
 </body>
