--- a/weather_app/browser/index.html
+++ b/weather_app/browser/index.html
@@ -1353,8 +1353,9 @@
       font-family: Roboto, Helvetica Neue, sans-serif
     }
   </style>
-  <link rel="stylesheet" href="styles-UON6AEL2.css" media="print" onload="this.media='all'"><noscript>
-    <link rel="stylesheet" href="styles-UON6AEL2.css">
+  <link rel="stylesheet" href="weather_app/browser/styles-UON6AEL2.css" media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet" href="weather_app/browser/styles-UON6AEL2.css">
   </noscript>
 </head>
 
@@ -1363,8 +1364,8 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_k7W8X03oSFV0g1994jmy8iaUNaDMZQ0&amp;loading=async&amp;libraries=marker&amp;map_ids=7d4b8caa60482244"></script>
   <link rel="modulepreload" href="weather_app/browser/chunk-O4NQQMBT.js">
-  <script src="polyfills-MH2GNY63.js" type="module"></script>
-  <script src="main-Z4EP6ENI.js" type="module"></script>
+  <script src="weather_app/browser/polyfills-MH2GNY63.js" type="module"></script>
+  <script src="weather_app/browser/main-Z4EP6ENI.js" type="module"></script>
 </body>
 
 </html>
