--- a/mmz/hearts/index.html
+++ b/mmz/hearts/index.html
@@ -68,7 +68,7 @@
             var guang = setInterval("$.guang()", 120);
 
             var subs = 0;
-            var string = "██亲爱的██我想告诉你██我深深地爱着你███每一天 每一刻██我的心里都是你███每当夜深人静的时候██我总会想起你的笑容██想起你温柔的眼神███每当星星闪烁的时候██我都会想起你的面庞██想起我们在一起的点点滴滴███我想告诉你██你是我生命中最重要的人██是我最想珍惜的人██我爱你  永远爱你";
+            var string = "██亲爱的██我想告诉你██我深深地爱着你███每一天 每一刻██我的心里都是你███每当夜深人静的时候██我总会想起你的笑容██想起你温柔的眼神███每当星星闪烁的时候██我总会想起你的身影██想起我们在一起的点点滴滴███我想告诉你██你是我生命中最重要的人██是我最想珍惜的人██我爱你  永远爱你";
             $.intent = function (str) {
                 str = "　　" + str;
                 //var reg=new RegExp("/█{1,2}/","i"); //创建正则RegExp对象
